--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -12,3 +12,6 @@ title: Welcome to Prospxt
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
       = link_to 'Start for free', '#', class: 'button'
+      %figure
+        .circle
+          %i.ion-ios-arrow-down
