--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -12,6 +12,32 @@
     vertical-align: middle
     text-align: center
     color: white
+    position: relative
     .button
       text-align: center
       margin: rem(15) auto
+      height: rem(55)
+      line-height: rem(55)
+      padding: 0 rem(60)
+      font-size: rem(18)
+    figure
+      position: absolute
+      left: 50%
+      margin: 0
+      bottom: rem(40)
+    .circle
+      position: relative
+      left: -50%
+
+.circle
+  border-radius: 50%
+  height: rem(80)
+  width: rem(80)
+  margin: 0 auto
+  text-align: center
+  border: rem(3) solid white
+  line-height: rem(74)
+  i
+    font:
+      size: rem(48)
+    vertical-align: middle
