Adds how it works

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -15,3 +15,22 @@ title: Welcome to Prospxt
       %figure
         .circle
           %i.ion-ios-arrow-down
+
+%section.how
+  %article
+    .wrapper
+      %h3 We generate leads, sign ups, and opportunities.
+      %h4 Here's how it works:
+      %ul
+        %li
+          = image_tag 'http://placehold.it/300x150'
+          %h5 Sign up free
+          Tell us about your company.
+        %li
+          = image_tag 'http://placehold.it/300x150'
+          %h5 Set your target
+          Tell us about your customer.
+        %li
+          = image_tag 'http://placehold.it/300x150'
+          %h5 Grow smarter
+          We'll deliver qualified leads and sign ups.
