--- a/source/stylesheets/_global.sass
+++ b/source/stylesheets/_global.sass
@@ -3,8 +3,14 @@
 
 // Colors
 $green: #a4d7c7
+$gray: #5a6879
+$light-gray: #758191
+
+// Variables
+$medium: 976px
 
 body
   font:
     family: 'Lato', sans-serif
     size: rem(13)
+  color: $light-gray
