--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -41,3 +41,10 @@
     font:
       size: rem(48)
     vertical-align: middle
+
+.how
+  text-align: center
+  padding: rem(90) 0
+  li
+    +media($medium)
+      +span-columns(4)
