--- a/source/stylesheets/components/_typography.sass
+++ b/source/stylesheets/components/_typography.sass
@@ -8,3 +8,31 @@ h2
   font:
     family: 'Karma', serif
     weight: 400
+
+h3
+  color: $gray
+  font:
+    size: rem(32)
+    weight: 900
+  margin: 0
+
+h4
+  font:
+    family: 'Karma', serif
+    weight: 400
+    size: rem(24)
+  margin: rem(15) 0
+
+h5
+  color: $gray
+  margin: rem(15) 0
+  font:
+    size: rem(18)
+    family: 'Lato', sans-serif
+
+ul
+  margin: 0
+  padding: 0
+  list-style: none
+  font:
+    family: 'Karma', serif
