Adds pricing divider

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,3 +34,6 @@ title: Welcome to Prospxt
           = image_tag 'http://placehold.it/300x150'
           %h5 Grow smarter
           We'll deliver qualified leads and sign ups.
+      %h4
+        Flexible, pay as you go pricing.
+        = link_to 'See pricing', '#'
