--- a/source/stylesheets/_global.sass
+++ b/source/stylesheets/_global.sass
@@ -5,9 +5,15 @@
 $green: #a4d7c7
 $gray: #5a6879
 $light-gray: #758191
+$blue: #6897D7
+$orange: #EA9C4F
+$purple: #C071E7
 
 // Variables
 $medium: 976px
+
+*
+  outline: none
 
 body
   font:
