--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
     <title><%= current_page.data.title || "The Middleman" %></title>
 
     <%= stylesheet_link_tag "normalize", "all", "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" %>
-    <%= javascript_include_tag  "all" %>
+    <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js", "all" %>
   </head>
 
   <body class="<%= page_classes %>">
