--- a/source/stylesheets/components/_buttons.sass
+++ b/source/stylesheets/components/_buttons.sass
@@ -10,3 +10,12 @@
   text-align: center
   padding: 0 rem(25)
   display: inline-block
+  +transition(all .3s ease-in-out)
+  &:hover
+    background-color: darken($green, 10%)
+    color: white
+  &.secondary
+    background-color: $blue
+    &:hover
+      background-color: darken($blue, 10%)
+      color: white
