--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -37,6 +37,7 @@
   text-align: center
   border: rem(3) solid white
   line-height: rem(74)
+  color: white
   i
     font:
       size: rem(48)
@@ -45,6 +46,81 @@
 .how
   text-align: center
   padding: rem(90) 0
+  h5
+    margin: rem(30) 0 rem(5) 0
+  ul
+    margin: rem(60) 0
   li
     +media($medium)
       +span-columns(4)
+    &:nth-of-type(1)
+      .icon-box
+        background: $blue
+    &:nth-of-type(2)
+      .icon-box
+        background: $orange
+    &:nth-of-type(3)
+      .icon-box
+        background: $purple
+
+
+.divider-container
+  height: 100%
+  display: table
+  width: 100%
+  position: relative
+
+.divider
+  display: table-cell
+  vertical-align: middle
+  height: 100%
+  margin: rem(60) 0
+  h4
+    background: white
+    margin: rem(60) 0
+    a
+      text-decoration: none
+    &:before, &:after
+      content: ''
+      position: absolute
+      height: rem(1)
+      background: lighten($light-gray, 30%)
+      left: 10%
+      right: calc(58% + 145px)
+      top: 50%
+    &:after
+      right: 10%
+      left: calc(58% + 145px)
+
+.icon-box
+  height: rem(45)
+  width: rem(45)
+  border-radius: rem(5)
+  margin: 0 auto
+  i
+    line-height: rem(50)
+    color: white
+    font-size: rem(21)
+
+.testimonial
+  background: url('/images/hero2.jpg') top center
+  background-size: cover
+  height: rem(600)
+  width: 100%
+  display: table
+  article
+    display: table-cell
+    vertical-align: middle
+    text-align: center
+    color: white
+    position: relative
+  h3
+    color: white
+    font-size: rem(42)
+  .button
+    text-align: center
+    margin: rem(30) auto
+    height: rem(55)
+    line-height: rem(55)
+    padding: 0 rem(60)
+    font-size: rem(18)
