--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -7,6 +7,7 @@
   height: 100vh
   width: 100%
   display: table
+  background-attachment: fixed
   article
     display: table-cell
     vertical-align: middle
