--- a/source/stylesheets/components/_footer.sass
+++ b/source/stylesheets/components/_footer.sass
@@ -19,3 +19,5 @@ footer.footer
         text-decoration: none
         font:
           family: 'Lato', sans-serif
+        &:hover
+          color: white
