Trying to fix fonts

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -41,6 +41,37 @@ title: Welcome to Prospxt
             Flexible, pay as you go pricing.
             = link_to 'See pricing', '#'
 
+-# %section#features.features
+-#   %article
+-#     .wrapper
+-#       %h3 Features
+-#       .tabs-container
+-#         %ul
+-#           %li
+-#             = link_to 'Lead Gen', '#', class: 'tab active', target: '1'
+-#           %li
+-#             = link_to 'Sales Dev', '#', class: 'tab', target: '2'
+-#           %li
+-#             = link_to 'Promotion', '#', class: 'tab', target: '3'
+-#         #tab1.content
+-#           %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+-#           %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
+-#           = image_tag 'http://placehold.it/350x150'
+-#           %dl
+-#             %dt Press Lists
+-#             %dd We generate fresh contacts weekly based on your custom goals and product.
+-#           %dl
+-#             %dt Guest Posts
+-#             %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+-#           %dl
+-#             %dt Content Promotion
+-#             %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+-#
+-#         #tab2.content{style: 'display:none'}
+-#           Tab 2
+-#         #tab3.content{style: 'display:none'}
+-#           Tab 3
+
 %section.testimonial
   %article
     .wrapper
