--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -4,8 +4,8 @@
       = image_tag 'images/prospxt.png'
     %ul
       %li
-        = link_to 'Features', 'features.html'
+        = link_to 'Features', '#features'
       %li
-        = link_to 'Pricing', 'pricing.html'
+        = link_to 'Pricing', '#pricing'
       %li
-        = link_to 'Contact', 'contact.html'
+        = link_to 'Contact', '#contact'
