--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -103,6 +103,10 @@
     color: white
     font-size: rem(21)
 
+.features
+  h3
+    text-align: center
+
 .testimonial
   background: url('/images/hero2.jpg') top center
   background-size: cover
