--- a/source/stylesheets/_global.sass
+++ b/source/stylesheets/_global.sass
@@ -1,5 +1,5 @@
 // Fonts
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900|Karma)
+@import url(//fonts.googleapis.com/css?family=Lato:300,400,700,900|Karma)
 
 // Colors
 $green: #a4d7c7
