--- a/source/stylesheets/_global.sass
+++ b/source/stylesheets/_global.sass
@@ -13,10 +13,16 @@ $purple: #C071E7
 $medium: 976px
 
 *
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
   outline: none
+  box-sizing: border-box
 
 body
   font:
     family: 'Lato', sans-serif
     size: rem(13)
   color: $light-gray
+
+body, html
+  height: 100%
