--- a/source/stylesheets/components/_footer.sass
+++ b/source/stylesheets/components/_footer.sass
@@ -4,6 +4,8 @@ footer.footer
   display: table
   width: 100%
   text-align: center
+  position: absolute
+  bottom: 0
   ul
     margin: 0
     display: table-cell
