--- a/source/stylesheets/pages/_dashboard.sass
+++ b/source/stylesheets/pages/_dashboard.sass
@@ -13,3 +13,30 @@ body.dashboard
       img
         height: rem(27)
         margin-top: rem(16)
+
+article.overlay
+  position: absolute
+  background: rgba(0,0,0,0.4)
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  z-index: 3
+  color: white
+  width: 100%
+  display: table
+  height: 100vh
+  font:
+    family: 'Lato', sans-serif
+  div
+    display: table-cell
+    vertical-align: middle
+    width: 100%
+    margin: 0 auto
+    text-align: center
+    ul
+      margin: rem(20) 0
+      padding: 0
+      li
+        display: inline-block
+        text-align: left
