Starts pricing page

--- a/source/contact-list.html.haml
+++ b/source/contact-list.html.haml
@@ -1,5 +1,5 @@
 ---
-title: Prospxt | Dashboard
+title: Prospxt | Contact List
 ---
 %section.dashboard
   %article.overlay
@@ -30,7 +30,7 @@ title: Prospxt | Dashboard
   %article
     .wrapper
       %header
-        %h5 Dashboard
+        %h5 Contact List
       %table.app-table
         -# %thead
         -#   %tr
@@ -56,7 +56,7 @@ title: Prospxt | Dashboard
               693
             %td
               Danilo Quilaton
-          -9.times do
+          -15.times do
             %tr
               %td
                 %input{type: 'checkbox'}
