--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -6,6 +6,6 @@
       %li
         = link_to 'Features', '#features'
       %li
-        = link_to 'Pricing', '#pricing'
+        = link_to 'Pricing', 'pricing.html'
       %li
         = link_to 'Contact', '#contact'
