--- a/source/stylesheets/components/_nav.sass
+++ b/source/stylesheets/components/_nav.sass
@@ -21,3 +21,20 @@ nav
           family: 'Lato', sans-serif
         &:hover
           color: darken($green, 10%)
+
+body
+  &.contact-list, &.pricing
+    nav
+      position: relative
+      background: darken($gray, 15%)
+      top: auto
+      a
+        color: rgba(255,255,255,0.7)
+        &:hover
+          color: white
+      +media($medium)
+        height: rem(55)
+        line-height: rem(55)
+        img
+          height: rem(27)
+          margin-top: rem(16)
