Updates features tabs

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -66,9 +66,33 @@ title: Welcome to Prospxt
             %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
 
         #tab2.content{style: 'display:none'}
-          Tab 2
+          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
+          = image_tag 'http://placehold.it/350x150'
+          %dl
+            %dt Press Lists
+            %dd We generate fresh contacts weekly based on your custom goals and product.
+          %dl
+            %dt Guest Posts
+            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+          %dl
+            %dt Content Promotion
+            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+
         #tab3.content{style: 'display:none'}
-          Tab 3
+          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
+          = image_tag 'http://placehold.it/350x150'
+          %dl
+            %dt Press Lists
+            %dd We generate fresh contacts weekly based on your custom goals and product.
+          %dl
+            %dt Guest Posts
+            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+          %dl
+            %dt Content Promotion
+            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+
 
 %section.testimonial
   %article
