updates features section divider

--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -95,7 +95,7 @@
       content: ''
       position: absolute
       height: rem(1)
-      background: lighten($light-gray, 30%)
+      background: lighten($light-gray, 40%)
       left: 10%
       right: calc(58% + 145px)
       top: 50%
@@ -114,6 +114,8 @@
     font-size: rem(21)
 
 .features
+  padding-top: rem(120)
+  border-top: rem(1) solid lighten($light-gray, 30%)
   h3
     text-align: center
 
