Updates pricing page

--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -4,6 +4,7 @@ title: Prospxt | Pricing
 %section.pricing
   %article
     .wrapper
+      %h2 Pricing right for you.
       %dl
         %dd
           %h3 We make growth easy.
@@ -12,12 +13,12 @@ title: Prospxt | Pricing
             Get 300 customized leads every month.
             %br
             Want to see what leads look like?
-            = link_to 'Start for free.', '#'
+            %br
+            = link_to 'Start for free', '#', class: 'button'
         %dd
           %h3 Cold Prospecting On-demand
           %h5 $749
           %p
-            Focus on your product, we'll handle the cold prospecting to drive sign ups, demos and new customers.
-            %br
             Need more leads? Want to pay per performance?
-            = link_to 'Contact Us.', '#'
+            %br
+            = link_to 'Contact Us', '#', class: 'button'
