Adds sign up form

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ title: Welcome to Prospxt
     .wrapper
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
-      = link_to 'Start for free', '#', class: 'button'
+      = link_to 'Start for free', '#', class: 'ui modal-btn button'
       %figure
         = link_to '#how' do
           .circle
@@ -102,3 +102,5 @@ title: Welcome to Prospxt
         %br
         100% in 30 days.
       = link_to 'Start for free', '#', class: 'button secondary'
+
+= partial 'refills/modal'
