--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -3,6 +3,9 @@
 @import 'global'
 @import 'bourbon'
 @import 'neat'
+@import 'vendor/transition'
+@import 'vendor/dimmer'
+@import 'vendor/modal'
 @import 'components/*'
 @import 'pages/dashboard'
 @import 'pages/pricing'
