--- a/source/stylesheets/pages/_pricing.sass
+++ b/source/stylesheets/pages/_pricing.sass
@@ -1,4 +1,8 @@
 .pricing
+  // background: url('/images/pricing-bg.jpg') top center no-repeat
+  // height: auto
+  // width: 100%
+  // background-size: cover
   article
     +clearfix
     h2
