--- a/source/stylesheets/components/_nav.sass
+++ b/source/stylesheets/components/_nav.sass
@@ -14,13 +14,13 @@ nav
     li
       display: inline-block
       a
-        color: white
+        color: rgba(255,255,255,0.8)
         margin: 0 rem(30)
         text-decoration: none
         font:
           family: 'Lato', sans-serif
         &:hover
-          color: darken($green, 10%)
+          color: white
 
 body
   &.contact-list, &.pricing
