Updates features section

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -52,23 +52,25 @@ title: Welcome to Prospxt
           %li
             = link_to 'Promotion', '#', class: 'tab', target: '3'
         #tab1.content
-          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
-          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-          = image_tag 'http://placehold.it/350x150'
+          %div
+            = image_tag 'images/icon-4.png'
+          %h4 Get accurate, customziable leads delivered to your inbox or CRM as often as you like.
+          %p We research and provide customized contacts based on your growth goals, product and target audience. Leads are unique to your business.
           %dl
-            %dt Press Lists
-            %dd We generate fresh contacts weekly based on your custom goals and product.
+            %dt Custom research
+            %dd Our blend of tech and people, build custom contact lists on the fly.
           %dl
-            %dt Guest Posts
-            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+            %dt Plug &amp; play data
+            %dd Data is imported to any CRM or automation tool as often as you need new contacts.
           %dl
-            %dt Content Promotion
-            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+            %dt Pay as you go
+            %dd Plans are built for scrapp startups and emerging enterprises, who need flexibility.
 
         #tab2.content{style: 'display:none'}
+          %div
+            = image_tag 'images/icon-3.png'
           %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
           %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-          = image_tag 'http://placehold.it/350x150'
           %dl
             %dt Press Lists
             %dd We generate fresh contacts weekly based on your custom goals and product.
@@ -80,17 +82,18 @@ title: Welcome to Prospxt
             %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
 
         #tab3.content{style: 'display:none'}
-          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
-          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-          = image_tag 'http://placehold.it/350x150'
+          %div
+            = image_tag 'images/icon-2.png'  
+          %h4 We accelerate revenue and build early traction with turnkey sales development services.
+          %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
           %dl
-            %dt Press Lists
+            %dt Lead generation
             %dd We generate fresh contacts weekly based on your custom goals and product.
           %dl
-            %dt Guest Posts
-            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+            %dt Cold prospecting
+            %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
           %dl
-            %dt Content Promotion
+            %dt Sales Analysis
             %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
 
 
@@ -101,6 +104,6 @@ title: Welcome to Prospxt
         Breezy HR grew
         %br
         100% in 30 days.
-      = link_to 'Start for free', '#', class: 'button secondary'
+      = link_to 'Start for free', '#', class: 'ui modal-btn button secondary'
 
 = partial 'refills/modal'
