--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -14,7 +14,7 @@ title: Prospxt | Pricing
             %br
             Want to see what leads look like?
             %br
-            = link_to 'Start for free', '#', class: 'button'
+            = link_to 'Start for free', '#', class: 'ui modal-btn button'
         %dd
           %h3 Cold Prospecting On-demand
           %h5 $749
@@ -22,3 +22,5 @@ title: Prospxt | Pricing
             Need more leads? Want to pay per performance?
             %br
             = link_to 'Contact Us', '#', class: 'button'
+
+= partial 'refills/modal'
