--- a/source/stylesheets/components/_typography.sass
+++ b/source/stylesheets/components/_typography.sass
@@ -22,6 +22,7 @@ h4
     weight: 400
     size: rem(24)
   margin: rem(15) 0
+  color: $gray
 
 h5
   color: $gray
@@ -36,7 +37,15 @@ a
   &:hover
     color: darken($green, 5%)
 
+p
+  line-height: rem(25)
+
 ul
   margin: 0
   padding: 0
   list-style: none
+
+dl
+  margin: 0
+  dd
+    margin: 0
