--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -116,8 +116,21 @@
 .features
   padding-top: rem(120)
   border-top: rem(1) solid lighten($light-gray, 30%)
+  div
+    text-align: center
+    img
+      width: rem(150)
   h3
     text-align: center
+  dl
+    +media($medium)
+      +span-columns(4)
+    dt
+      color: $gray
+      font-size: rem(18)
+      margin: 0 0 rem(5) 0
+    dd
+      margin: 0 0 rem(15) 0
 
 .testimonial
   background: url('/images/hero2.jpg') top center
