--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -63,31 +63,35 @@ title: Welcome to Prospxt
           %figure
             = image_tag 'http://placekitten.com/g/900/900'
         #tab2.content{style: 'display:none'}
-          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
-          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-          %dl
-            %dt Press Lists
-            %dd We generate fresh contacts weekly based on your custom goals and product.
-          %dl
-            %dt Guest Posts
-            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
-          %dl
-            %dt Content Promotion
-            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
-
+          %figure
+            %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+            %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
+            %dl
+              %dt Press Lists
+              %dd We generate fresh contacts weekly based on your custom goals and product.
+            %dl
+              %dt Guest Posts
+              %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+            %dl
+              %dt Content Promotion
+              %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+          %figure
+            = image_tag 'http://placekitten.com/g/900/900'
         #tab3.content{style: 'display:none'}
-          %h4 We accelerate revenue and build early traction with turnkey sales development services.
-          %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
-          %dl
-            %dt Lead generation
-            %dd We generate fresh contacts weekly based on your custom goals and product.
-          %dl
-            %dt Cold prospecting
-            %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
-          %dl
-            %dt Sales Analysis
-            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
-
+          %figure
+            %h4 We accelerate revenue and build early traction with turnkey sales development services.
+            %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
+            %dl
+              %dt Lead generation
+              %dd We generate fresh contacts weekly based on your custom goals and product.
+            %dl
+              %dt Cold prospecting
+              %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
+            %dl
+              %dt Sales Analysis
+              %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+          %figure
+            = image_tag 'http://placekitten.com/g/900/900'
 
 %section.testimonial
   %article
