--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -119,12 +119,13 @@
     font-size: rem(21)
 
 .features
-  padding-top: rem(120)
+  padding: rem(150) 0 rem(230) 0
   border-top: rem(1) solid lighten($light-gray, 30%)
   div
     img
       width: rem(150)
   h3
+    text-align: center
     font:
       size: rem(42)
   dl
