--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -97,9 +97,7 @@ title: Welcome to Prospxt
   %article
     .wrapper
       %h3
-        Breezy HR grew
-        %br
-        100% in 30 days.
-      = link_to 'Start for free', '#', class: 'ui modal-btn button secondary'
+        We helped Breezy HR grow 100% in 30 days.
+      = link_to 'Start for free', '#', class: 'ui modal-btn button white'
 
 = partial 'refills/modal'
