--- a/source/stylesheets/components/_footer.sass
+++ b/source/stylesheets/components/_footer.sass
@@ -1,5 +1,5 @@
 footer.footer
-  background: darken($green, 20%)
+  background: #5170a7
   min-height: rem(65)
   display: table
   width: 100%
@@ -13,11 +13,11 @@ footer.footer
     li
       display: inline-block
       margin: 0 rem(10)
-      color: rgba(255,255,255,0.5)
+      color: darken(#5170a7, 30%)
       font:
         family: 'Lato', sans-serif
       a
-        color: darken($green, 35%)
+        color: rgba(255,255,255,0.6)
         text-decoration: none
         font:
           family: 'Lato', sans-serif
