--- a/source/stylesheets/components/_buttons.sass
+++ b/source/stylesheets/components/_buttons.sass
@@ -20,3 +20,9 @@
     &:hover
       background-color: darken($blue, 10%)
       color: white
+  &.white
+    background-color: white
+    color: rgba(0,0,0,0.4)
+    &:hover
+      background-color: darken(white, 10%)
+      color: rgba(0,0,0,0.6)
